mod namespace and add EventSender.php

--- a/homework-1/ex1/composer.json
+++ b/homework-1/ex1/composer.json
@@ -1,9 +1,8 @@
 {
-    "name": "alexander/ex1",
-    "description": "Homework for Geekbrains",
+    "name": "app/src",
     "autoload": {
         "psr-4": {
-            "src\\": "src/"
+            "App\\src\\": "src/"
         }
     },
     "authors": [
