--- a/homework-1/ex1/composer.json
+++ b/homework-1/ex1/composer.json
@@ -11,5 +11,7 @@
             "email": "salispiligrim@yandex.ru"
         }
     ],
-    "require": {}
+    "require": {
+        "mtdowling/cron-expression": "^1.2"
+    }
 }
