--- a/homework-telegram/composer.json
+++ b/homework-telegram/composer.json
@@ -18,6 +18,7 @@
     "require-dev": {
         "phpunit/phpunit": "^12.1",
         "mockery/mockery": "^1.6",
-        "php-mock/php-mock-mockery": "^1.5"
+        "php-mock/php-mock-mockery": "^1.5",
+        "php-mock/php-mock": "^2.6"
     }
 }
