--- a/homework-telegram/composer.json
+++ b/homework-telegram/composer.json
@@ -5,6 +5,11 @@
             "App\\src\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "App\\Tests\\": "Tests/"
+        }
+    },
     "authors": [
         {
             "name": "AlexanderTsaricov",
