--- a/homework-telegram/composer.json
+++ b/homework-telegram/composer.json
@@ -19,7 +19,8 @@
     "require": {
         "vlucas/phpdotenv": "^5.6",
         "dragonmantank/cron-expression": "^3.4",
-        "symfony/console": "^7.2"
+        "symfony/console": "^7.2",
+        "psr/simple-cache": "^3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^12.1",
